*actually* fixed the overflow x issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -245,7 +245,7 @@ section nav a:hover {
 
 @media screen and (min-width: 390px) and (max-width: 844px) {
    body {
-    position: fixed;
+   overflow-x: hidden;
    }
 
     header {
